// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders loading 1`] = `
<div>
  Loading
</div>
`;

exports[`it renders with an error 1`] = `
<div>
  Error loading repos
</div>
`;

exports[`it renders with data 1`] = `
<repository-list__StyledRepositoryList>
  <Link
    key=":repoName1"
    to="/repositories/:login1/:repoName1/issues"
  >
    :repoName1
  </Link>
  <Link
    key=":repoName2"
    to="/repositories/:login2/:repoName2/issues"
  >
    :repoName2
  </Link>
</repository-list__StyledRepositoryList>
`;
